force-app/main/default/objects/mkto_si__Marketo_Sales_Insight_Config__c/mkto_si__Marketo_Sales_Insight_Config__c.object-meta.xml
<CustomObject>
    <label>Marketo Sales Insight Config</label>
    <nameField>
        <displayFormat>MarketoAPI{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketo Sales Insight Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>