force-app/main/default/objects/mkto_si__Marketo_Sales_Insight_Config__c/fields/mkto_si__API_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__API_Secret_Key__c</fullName>
    <label>API Secret Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>