force-app/main/default/objects/mkto_si__Marketo_Sales_Insight_Config__c/fields/mkto_si__API_User_Id__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__API_User_Id__c</fullName>
    <description>The username for accessing the Marketo API.</description>
    <label>API User Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>