force-app/main/default/objects/mkto_si__Marketo_Sales_Insight_Config__c/fields/mkto_si__Marketo_Host__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Marketo_Host__c</fullName>
    <label>Marketo Host</label>
    <required>true</required>
    <type>Url</type>
</CustomField>